ops/mongo-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    name: mongo
  name: mongo
spec:
  replicas: 1
  strategy: {}
  template:
    metadata:
      labels:
        name: mongo
        app: blink-location
    spec:
      containers:
      - image: mongo:latest
        name: mongo
        resources: {}
        volumeMounts:
          - mountPath: "/data"
            name: mongodbvolume
      restartPolicy: Always
      volumes:
        - name: mongodbvolume
          persistentVolumeClaim:
            claimName: blinklocationclaim


status: {}
