ops/web-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    name: web-svc
  name: web-svc
spec:
  selector:
    app: web-app
  ports:
  - name: web
    port: 80
    targetPort: 3000
status:
  loadBalancer: {}
